docs: add more info to 2.0.0 section

--- a/changelog.org
+++ b/changelog.org
@@ -1,3 +1,12 @@
 * Changelog
 ** 2.0.0 [2019-12-21]
 Moving forward, all the changes will be documented here.
+
+Huge thanks to [[github:E-RELevant]] for testing and reporting bugs throughout this
+entire process. It wouldn't have been the same without your help. :tada:
+
+*** About v1.x.x version
+*TL;DR:* It is going away soon.
+
+When the script is done, the version 2.x.x will be compiled to =wa.user.css= file.
+USo userstyle will be updated shortly after with this version.
