--- a/readme.org
+++ b/readme.org
@@ -50,6 +50,12 @@ A port of this theme is available in the [[https://github.com/dcferreira/franz-t
 
 Any contribution is greatly appreciated. If you really like the project and
 would like to tip me then you can buy me a coffee over at [[https://ko-fi.com/vednoc][ko-fi]].
+** Credits
+
+This project wouldn't be possible without:
+- [[https://github.com/E-RELevant][E-RELevant]] for making wiki pages, testing and reporting/fixing bugs.
+- [[https://github.com/StylishThemes/][StylishThemes]] team for inspiration and documentation templates.
+- [[https://unsplash.com/@totem_phillip][Phillip Sauerbeck]] for the gorgeous [[https://unsplash.com/photos/Tmk0MkQVwwA][background image]].
 
 ** License
 
