--- a/changelog.org
+++ b/changelog.org
@@ -1,6 +1,28 @@
 #+STARTUP: nofold
 
 * Changelog
+** 2.0.6 [2020-01-17]
+Hotfix for the latest update.
+
+*** USo/v1 notice
+- Ported some of the changes; please move over to v2
+- The v2 is coming to ~wa.user.css~ and userstyles.org in next the version
+
+*** Documentation
+- Added issue templates
+- Added sponsor button to the repository
+- Added external links and info about companion-style ([[https://github.com/vednoc/dark-whatsapp/pull/87][#87]])
+
+*** Fixed
+- A ton of broken things from the newest update ([[https://github.com/vednoc/dark-whatsapp/pull/89][#89]])
+- Selected media header and icons
+- Icons and badges in compact mode
+- Z-index for the menu in starred messages
+- Caret color for ~select~ elements
+- Modal colors when adding group participants
+- Bottom divider for applications on intro page ([[https://github.com/vednoc/dark-whatsapp/pull/90][#90]])
+- Emoji search input text color in Chromium
+
 ** 2.0.5 [2020-01-13]
 Minor bug fixes and improvements.
 
