--- a/changelog.org
+++ b/changelog.org
@@ -1,6 +1,19 @@
 #+STARTUP: nofold
 
 * Changelog
+** 2.6.0 [2020-05-07]
+Improvements for RTL tweaks (thanks [[https://github.com/E-RELevant][Erel]] for keeping me busy with lots of bug
+reports) and minor broken styles.
+
+*** Improved
+- Build script received lots of improvements and enhancements
+- A whole lot of selectors for RTL message options
+- Colors for audio message sliders
+
+*** Fixed
+- Contacts area in 'add participant' modal ([[https://github.com/vednoc/dark-whatsapp/issues/152][#152]])
+- Colors for voice message icons ([[https://github.com/vednoc/dark-whatsapp/issues/151][#151]])
+
 ** 2.5.0 [2020-05-03]
 Fix formatting for RTL messages and minor broken styles.
 
@@ -11,6 +24,7 @@ Fix formatting for RTL messages and minor broken styles.
 - Removed deprecated v1 userstyle from the file tree
 
 *** Improved
+- Build script now converts Lite version to Franz/Ferdi properly
 - Formatting for RTL messages ([[https://github.com/vednoc/dark-whatsapp/issues/107][#107]]; thanks [[https://github.com/E-RELevant][Erel]] for the help!)
 
 *** Fixed
